adding broken pipeline

--- a/helm/index.html
+++ b/helm/index.html
@@ -97,13 +97,21 @@
             Documentação do projeto:
         </h2>
         <div class="md-docs">
-            <zero-md src="./README.md">
+            <zero-md src="./TIMELINE.md">
                 <template>
                     <style>
                         h1 {
                             color: #89b4fa;
                         }
                         h2 {
+                            color: #89b4fa;
+                        }
+
+                        p {
+                            color: #89b4fa;
+                        }
+
+                        a {
                             color: #89b4fa;
                         }
                     </style>
